--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.7.0",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-slideshow-image": "^3.7.0"
+    "react-slideshow-image": "^3.7.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
     "eslint": "8.11.0",
