--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
     "next": "12.1.0",
+    "next-auth": "^4.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
