--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.7.0",
+    "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
