--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+HOST_NAME=
+
 MONGO_URL=
 JWT_SECRET_SEED=
 NEXTAUTH_SECRET=
@@ -14,3 +16,6 @@ NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
 PAYPAL_OAUTH_URL=
 PAYPAL_ORDERS_URL=
+
+#CLOUDINARY
+CLOUDINARY_URL=
